Added Measurement procedure, added testcases for measurements

--- a/prototyping/BellCircuits.ipynb
+++ b/prototyping/BellCircuits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "    nlevel: 2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +64,14 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"153\" height=\"90\" viewBox=\"0 0 153 90\">\n",
        "<defs>\n",
        "<g>\n",
-       "<g id=\"glyph-572489-0-0\">\n",
+       "<g id=\"glyph-235802-0-0\">\n",
        "<path d=\"M 1.578125 -11.671875 L 3.15625 -11.671875 L 3.15625 -6.890625 L 8.890625 -6.890625 L 8.890625 -11.671875 L 10.46875 -11.671875 L 10.46875 0 L 8.890625 0 L 8.890625 -5.5625 L 3.15625 -5.5625 L 3.15625 0 L 1.578125 0 Z M 1.578125 -11.671875 \"/>\n",
        "</g>\n",
        "</g>\n",
        "</defs>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 39 34.5 L 39 10.5 L 63 10.5 L 63 34.5 Z M 39 34.5 \"/>\n",
        "<g fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\">\n",
-       "<use xlink:href=\"#glyph-572489-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
+       "<use xlink:href=\"#glyph-235802-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
        "</g>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 22.5 L 39 22.5 \"/>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 63 22.5 L 76.5 22.5 \"/>\n",
@@ -90,7 +90,7 @@
       ],
       "text/plain": []
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,20 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "4×1 Matrix{ComplexF64}:\n",
+       " 0.7071067811865475 + 0.0im\n",
        "                0.0 + 0.0im\n",
-       " 0.7071067811865475 + 0.0im\n",
-       " 0.7071067811865475 + 0.0im\n",
-       "                0.0 + 0.0im"
+       "                0.0 + 0.0im\n",
+       " 0.7071067811865475 + 0.0im"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,10 +125,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrayReg{2, ComplexF64, Array...}\n",
+       "    active qubits: 3/3\n",
+       "    nlevel: 2"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "register2 = ArrayReg(bit\"000\")\n",
+    "circuit = chain(3, put(1=>H), put(2=>H), put(3=>H))\n",
+    "register2 |> circuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1-element Vector{DitStr{2, 1, Int64}}:\n",
+       " 1 ₍₂₎"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measure(register2, 2)"
+   ]
   }
  ],
  "metadata": {
