--- a/prototyping/BellCircuits.ipynb
+++ b/prototyping/BellCircuits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -34,7 +34,7 @@
        "    nlevel: 2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +64,14 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"153\" height=\"90\" viewBox=\"0 0 153 90\">\n",
        "<defs>\n",
        "<g>\n",
-       "<g id=\"glyph-235802-0-0\">\n",
+       "<g id=\"glyph-411064-0-0\">\n",
        "<path d=\"M 1.578125 -11.671875 L 3.15625 -11.671875 L 3.15625 -6.890625 L 8.890625 -6.890625 L 8.890625 -11.671875 L 10.46875 -11.671875 L 10.46875 0 L 8.890625 0 L 8.890625 -5.5625 L 3.15625 -5.5625 L 3.15625 0 L 1.578125 0 Z M 1.578125 -11.671875 \"/>\n",
        "</g>\n",
        "</g>\n",
        "</defs>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 39 34.5 L 39 10.5 L 63 10.5 L 63 34.5 Z M 39 34.5 \"/>\n",
        "<g fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\">\n",
-       "<use xlink:href=\"#glyph-235802-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
+       "<use xlink:href=\"#glyph-411064-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
        "</g>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 22.5 L 39 22.5 \"/>\n",
        "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 63 22.5 L 76.5 22.5 \"/>\n",
@@ -90,7 +90,7 @@
       ],
       "text/plain": []
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        " 0.7071067811865475 + 0.0im"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,53 +125,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ArrayReg{2, ComplexF64, Array...}\n",
-       "    active qubits: 3/3\n",
+       "    active qubits: 2/2\n",
        "    nlevel: 2"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "register2 = ArrayReg(bit\"000\")\n",
-    "circuit = chain(3, put(1=>H), put(2=>H), put(3=>H))\n",
-    "register2 |> circuit"
+    "reg2 = ArrayReg(bit\"00\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Matrix{ComplexF64}:\n",
+       " 1.0 + 0.0im\n",
+       " 0.0 + 0.0im\n",
+       " 0.0 + 0.0im\n",
+       " 0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state(reg2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1-element Vector{DitStr{2, 1, Int64}}:\n",
-       " 1 ₍₂₎"
+       "\u001b[36mnqubits: 2\u001b[39m\n",
+       "\u001b[34m\u001b[1mchain\u001b[22m\u001b[39m\n",
+       "├─ \u001b[36m\u001b[1mput on (\u001b[22m\u001b[39m\u001b[36m\u001b[1m1\u001b[22m\u001b[39m\u001b[36m\u001b[1m)\u001b[22m\u001b[39m\n",
+       "│  └─ H\n",
+       "└─ \u001b[36m\u001b[1mput on (\u001b[22m\u001b[39m\u001b[36m\u001b[1m2\u001b[22m\u001b[39m\u001b[36m\u001b[1m)\u001b[22m\u001b[39m\n",
+       "   └─ H\n"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "measure(register2, 2)"
+    "hadamard = chain(2, put(1=>H), put(2=>H))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"102\" height=\"90\" viewBox=\"0 0 102 90\">\n",
+       "<defs>\n",
+       "<g>\n",
+       "<g id=\"glyph-658150-0-0\">\n",
+       "<path d=\"M 1.578125 -11.671875 L 3.15625 -11.671875 L 3.15625 -6.890625 L 8.890625 -6.890625 L 8.890625 -11.671875 L 10.46875 -11.671875 L 10.46875 0 L 8.890625 0 L 8.890625 -5.5625 L 3.15625 -5.5625 L 3.15625 0 L 1.578125 0 Z M 1.578125 -11.671875 \"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</defs>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 39 34.5 L 39 10.5 L 63 10.5 L 63 34.5 Z M 39 34.5 \"/>\n",
+       "<g fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\">\n",
+       "<use xlink:href=\"#glyph-658150-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
+       "</g>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 22.5 L 39 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 63 22.5 L 76.5 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 39 79.5 L 39 55.5 L 63 55.5 L 63 79.5 Z M 39 79.5 \"/>\n",
+       "<g fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\">\n",
+       "<use xlink:href=\"#glyph-658150-0-0\" x=\"44.984375\" y=\"73.332031\"/>\n",
+       "</g>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 67.5 L 39 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 63 67.5 L 76.5 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 76.5 22.5 L 76.5 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 76.5 67.5 L 76.5 67.5 \"/>\n",
+       "</svg>\n"
+      ],
+      "text/plain": []
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot(hadamard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrayReg{2, ComplexF64, Array...}\n",
+       "    active qubits: 2/2\n",
+       "    nlevel: 2"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg2 |> hadamard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Matrix{ComplexF64}:\n",
+       " 0.4999999999999999 + 0.0im\n",
+       " 0.4999999999999999 + 0.0im\n",
+       " 0.4999999999999999 + 0.0im\n",
+       " 0.4999999999999999 + 0.0im"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1 = state(reg2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Float64}:\n",
+       " 0.7071067811865475\n",
+       " 0.0\n",
+       " 0.7071067811865475\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hGate = (1/sqrt(2)) * [1 1; 1 -1]\n",
+    "identity = [1 0; 0 1]\n",
+    "\n",
+    "initialVector = [1; 0; 0; 0]\n",
+    "transformation = hGate ⊗ identity\n",
+    "\n",
+    "s2 = transformation * initialVector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Kronecker.KroneckerProduct{Float64, Matrix{Float64}, Matrix{Int64}}:\n",
+       " 0.707107  0.0        0.707107   0.0\n",
+       " 0.0       0.707107   0.0        0.707107\n",
+       " 0.707107  0.0       -0.707107  -0.0\n",
+       " 0.0       0.707107  -0.0       -0.707107"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49999999999999983"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inner_prod = (s1' * s2)\n",
+    "value = inner_prod[1, 1]\n",
+    "abs(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Kronecker.KroneckerProduct{Float64, Matrix{Float64}, Matrix{Int64}}:\n",
+       " 0.707107  0.0        0.707107   0.0\n",
+       " 0.0       0.707107   0.0        0.707107\n",
+       " 0.707107  0.0       -0.707107  -0.0\n",
+       " 0.0       0.707107  -0.0       -0.707107"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hGate ⊗ identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×4 Kronecker.KroneckerProduct{Float64, Matrix{Int64}, Matrix{Float64}}:\n",
+       " 0.707107   0.707107  0.0        0.0\n",
+       " 0.707107  -0.707107  0.0       -0.0\n",
+       " 0.0        0.0       0.707107   0.707107\n",
+       " 0.0       -0.0       0.707107  -0.707107"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "identity ⊗ hGate"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.1",
+   "display_name": "Julia 1.11.3",
    "language": "julia",
    "name": "julia-1.11"
   },
