Added teleportation example, fixed rotation generator gates

--- a/prototyping/BellCircuits.ipynb
+++ b/prototyping/BellCircuits.ipynb
@@ -395,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -414,6 +416,150 @@
    ],
    "source": [
     "identity ⊗ hGate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrayReg{2, ComplexF64, Array...}\n",
+       "    active qubits: 2/2\n",
+       "    nlevel: 2"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bellRegister = ArrayReg(bit\"00\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[36mnqubits: 2\u001b[39m\n",
+       "\u001b[34m\u001b[1mchain\u001b[22m\u001b[39m\n",
+       "├─ \u001b[36m\u001b[1mput on (\u001b[22m\u001b[39m\u001b[36m\u001b[1m1\u001b[22m\u001b[39m\u001b[36m\u001b[1m)\u001b[22m\u001b[39m\n",
+       "│  └─ H\n",
+       "└─ \u001b[31m\u001b[1mcontrol(\u001b[22m\u001b[39m\u001b[31m\u001b[1m1\u001b[22m\u001b[39m\u001b[31m\u001b[1m)\u001b[22m\u001b[39m\n",
+       "   └─ \u001b[37m\u001b[1m(2,)\u001b[22m\u001b[39m X\n"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bellCircuit = chain(2, put(1=>H), control(1,2 => X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"153\" height=\"90\" viewBox=\"0 0 153 90\">\n",
+       "<defs>\n",
+       "<g>\n",
+       "<g id=\"glyph-999703-0-0\">\n",
+       "<path d=\"M 1.578125 -11.671875 L 3.15625 -11.671875 L 3.15625 -6.890625 L 8.890625 -6.890625 L 8.890625 -11.671875 L 10.46875 -11.671875 L 10.46875 0 L 8.890625 0 L 8.890625 -5.5625 L 3.15625 -5.5625 L 3.15625 0 L 1.578125 0 Z M 1.578125 -11.671875 \"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</defs>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 39 34.5 L 39 10.5 L 63 10.5 L 63 34.5 Z M 39 34.5 \"/>\n",
+       "<g fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\">\n",
+       "<use xlink:href=\"#glyph-999703-0-0\" x=\"44.984375\" y=\"28.332031\"/>\n",
+       "</g>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 22.5 L 39 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 63 22.5 L 76.5 22.5 \"/>\n",
+       "<path fill-rule=\"nonzero\" fill=\"rgb(0%, 0%, 0%)\" fill-opacity=\"1\" d=\"M 104.398438 22.5 C 104.398438 23.824219 103.324219 24.898438 102 24.898438 C 100.675781 24.898438 99.601562 23.824219 99.601562 22.5 C 99.601562 21.175781 100.675781 20.101562 102 20.101562 C 103.324219 20.101562 104.398438 21.175781 104.398438 22.5 Z M 104.398438 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 110.398438 67.5 C 110.398438 72.140625 106.640625 75.898438 102 75.898438 C 97.359375 75.898438 93.601562 72.140625 93.601562 67.5 C 93.601562 62.859375 97.359375 59.101562 102 59.101562 C 106.640625 59.101562 110.398438 62.859375 110.398438 67.5 Z M 110.398438 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 93.601562 67.5 L 110.398438 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 102 59.101562 L 102 75.898438 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 102 59.101562 L 102 24.898438 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 76.5 22.5 L 99.601562 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 104.398438 22.5 L 127.5 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 25.5 67.5 L 93.601562 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 110.398438 67.5 L 127.5 67.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 127.5 22.5 L 127.5 22.5 \"/>\n",
+       "<path fill=\"none\" stroke-width=\"1\" stroke-linecap=\"butt\" stroke-linejoin=\"miter\" stroke=\"rgb(0%, 0%, 0%)\" stroke-opacity=\"1\" stroke-miterlimit=\"10\" d=\"M 127.5 67.5 L 127.5 67.5 \"/>\n",
+       "</svg>\n"
+      ],
+      "text/plain": []
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot(bellCircuit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArrayReg{2, ComplexF64, Array...}\n",
+       "    active qubits: 2/2\n",
+       "    nlevel: 2"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bellRegister |> bellCircuit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Matrix{ComplexF64}:\n",
+       " 0.7071067811865475 + 0.0im\n",
+       "                0.0 + 0.0im\n",
+       "                0.0 + 0.0im\n",
+       " 0.7071067811865475 + 0.0im"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state(bellRegister)"
    ]
   }
  ],
