--- a/prototyping/QiskitHadamardParallelization.ipynb
+++ b/prototyping/QiskitHadamardParallelization.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "b21b64cb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -71,6 +73,33 @@
     "print(\"\\nStatevector when Hadamard is applied to qubit 1:\")\n",
     "print(statevector2)\n",
     "array_to_latex(statevector2, prefix=\"|ψ₁⟩ = \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0dc027a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statevector([1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j,\n",
+      "             0.+0.j],\n",
+      "            dims=(2, 2, 2))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import QuantumRegister, QuantumCircuit\n",
+    "from qiskit.quantum_info import Statevector\n",
+    "\n",
+    "qreg = QuantumRegister(3, 'q')\n",
+    "qc = QuantumCircuit(qreg)\n",
+    "\n",
+    "sv = Statevector.from_instruction(qc)\n",
+    "print(sv)\n"
    ]
   }
  ],
