--- a/prototyping/TeleportationPrototype.ipynb
+++ b/prototyping/TeleportationPrototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "id": "0e87f4b3",
    "metadata": {},
    "outputs": [],
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "060260a8",
+   "execution_count": 2,
+   "id": "713f33ec",
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "4.857364"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,6 +34,31 @@
     "xPhase = 1.503123\n",
     "yPhase = 0.825345 \n",
     "zPhase = 4.857364 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "4934e780",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4×1 Matrix{ComplexF64}:\n",
+       " 1.0 + 0.0im\n",
+       " 0.0 + 0.0im\n",
+       " 0.0 + 0.0im\n",
+       " 0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state(ArrayReg(bit\"00\"))"
    ]
   },
   {
@@ -61,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d1575f46",
+   "execution_count": 4,
+   "id": "8c540b46",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +98,7 @@
        "    nlevel: 2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,25 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "7f033e7d",
+   "execution_count": 6,
+   "id": "9acd98cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "8×1 Matrix{ComplexF64}:\n",
-       " 0.4999999999999999 + 0.0im\n",
-       " 0.4999999999999999 + 0.0im\n",
-       " 0.4999999999999999 + 0.0im\n",
-       " 0.4999999999999999 + 0.0im\n",
+       " 0.7071067811865475 + 0.0im\n",
+       "                0.0 + 0.0im\n",
+       " 0.7071067811865475 + 0.0im\n",
+       "                0.0 + 0.0im\n",
        "                0.0 + 0.0im\n",
        "                0.0 + 0.0im\n",
        "                0.0 + 0.0im\n",
        "                0.0 + 0.0im"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "181cfa86",
+   "execution_count": 7,
+   "id": "8d5be610",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +152,7 @@
        "    nlevel: 2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,25 +165,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "8c9ece09",
+   "execution_count": 8,
+   "id": "0c1f0c37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "8×1 Matrix{ComplexF64}:\n",
-       "  -0.2573043676124354 + 0.009949986808513459im\n",
-       " -0.06988852469142959 + 0.6548366622956677im\n",
-       "  -0.2573043676124354 + 0.009949986808513459im\n",
-       " -0.06988852469142959 + 0.6548366622956677im\n",
+       " -0.23136031290410267 - 0.45600374133381527im\n",
+       "  0.13252301343123604 + 0.4700751476238484im\n",
+       " -0.23136031290410267 - 0.45600374133381527im\n",
+       "  0.13252301343123604 + 0.4700751476238484im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9e025a9e",
+   "execution_count": 9,
+   "id": "71e5a7b1",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +206,7 @@
        "    nlevel: 2"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,25 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "2cf3e8a7",
+   "execution_count": 10,
+   "id": "a085e7bf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "8×1 Matrix{ComplexF64}:\n",
-       " -0.23136031290410264 + 0.47007514762384833im\n",
-       " -0.13252301343123601 - 0.4560037413338152im\n",
-       " -0.23136031290410264 + 0.47007514762384833im\n",
-       " -0.13252301343123601 - 0.4560037413338152im\n",
+       " -0.06988852469142956 + 0.0099499868085135im\n",
+       " -0.25730436761243536 - 0.6548366622956676im\n",
+       " -0.06988852469142956 + 0.0099499868085135im\n",
+       " -0.25730436761243536 - 0.6548366622956676im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im\n",
        "                  0.0 + 0.0im"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,71 +247,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "a851bca8",
-   "metadata": {},
+   "execution_count": 14,
+   "id": "82e72b04",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching ⊗(::Matrix{Int64}, ::UniformScaling{Bool})\nThe function `⊗` exists, but no method is defined for this combination of argument types.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  ⊗(::AbstractVecOrMat, \u001b[91m::AbstractVecOrMat\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mbase.jl:92\u001b[24m\u001b[39m\n\u001b[0m  ⊗(\u001b[91m::AbstractVecOrMat...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mbase.jl:93\u001b[24m\u001b[39m\n\u001b[0m  ⊗(::AbstractMatrix, \u001b[91m::Integer\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mkroneckerpowers.jl:39\u001b[24m\u001b[39m\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching ⊗(::Matrix{Int64}, ::UniformScaling{Bool})\nThe function `⊗` exists, but no method is defined for this combination of argument types.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  ⊗(::AbstractVecOrMat, \u001b[91m::AbstractVecOrMat\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mbase.jl:92\u001b[24m\u001b[39m\n\u001b[0m  ⊗(\u001b[91m::AbstractVecOrMat...\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mbase.jl:93\u001b[24m\u001b[39m\n\u001b[0m  ⊗(::AbstractMatrix, \u001b[91m::Integer\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mKronecker\u001b[39m \u001b[90m~/.julia/packages/Kronecker/wdc6I/src/\u001b[39m\u001b[90m\u001b[4mkroneckerpowers.jl:39\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[92]:7"
-     ]
+     "data": {
+      "text/plain": [
+       "8×8 Kronecker.KroneckerProduct{Int64, Kronecker.KroneckerProduct{Int64, Matrix{Int64}, Matrix{Int64}}, Matrix{Int64}}:\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  1  0  0  0  0  0\n",
+       " 0  0  0  1  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  1  0\n",
+       " 0  0  0  0  0  0  0  1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "ket0 = [1, 0]\n",
     "ket1 = [0, 1]\n",
     "\n",
+    "Id = [[1 0]; [0 1]]\n",
+    "\n",
     "P0 = ket0 * ket0'\n",
     "P1 = ket1 * ket1'\n",
     "\n",
-    "expandedP0one = P0 ⊗ I ⊗ I\n",
-    "expandedP1one = P1 ⊗ I ⊗ I \n",
+    "expandedP0one = P0 ⊗ Id ⊗ Id\n",
+    "expandedP1one = P1 ⊗ Id ⊗ Id \n",
     "\n",
-    "expandedP0two = I ⊗ P0 ⊗ I\n",
-    "expandedP1two = I ⊗ P1 ⊗ I "
+    "expandedP0two = Id ⊗ P0 ⊗ Id\n",
+    "expandedP1two = Id ⊗ P1 ⊗ Id "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "599506dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "121f23cd",
+   "execution_count": 39,
+   "id": "d1fa10ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1-element Vector{DitStr{2, 3, Int64}}:\n",
-       " 000 ₍₂₎"
+       "8×8 Kronecker.KroneckerProduct{Int64, Kronecker.KroneckerProduct{Int64, Matrix{Int64}, Matrix{Int64}}, Matrix{Int64}}:\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  1  0  0  0  0  0\n",
+       " 0  0  0  1  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  1  0\n",
+       " 0  0  0  0  0  0  0  1"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "state4 = measure(state3)"
+    "expandedP1two"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "89739ec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8×1 Matrix{ComplexF64}:\n",
+       "                  0.0 + 0.0im\n",
+       "                  0.0 + 0.0im\n",
+       " -0.06988852469142956 + 0.0099499868085135im\n",
+       " -0.25730436761243536 - 0.6548366622956676im\n",
+       "                  0.0 + 0.0im\n",
+       "                  0.0 + 0.0im\n",
+       "                  0.0 + 0.0im\n",
+       "                  0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ψ = state(state3)\n",
+    "ψ_1 = expandedP0one * ψ\n",
+    "ψ_2 = expandedP1one * ψ\n",
+    "\n",
+    "ψ_3 = expandedP0two * ψ\n",
+    "ψ_4 = expandedP1two * ψ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2cca0ece",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×1 Matrix{ComplexF64}:\n",
+       " 0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ψ_3' * ψ_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a56d9167",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1×1 Matrix{ComplexF64}:\n",
+       " 0.0 + 0.0im"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ψ_1' * ψ_2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "99110d66",
+   "id": "7d14382d",
    "metadata": {},
    "outputs": [
     {
